--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html><head>
-    <title>My profile</title>
+    <title>About Yassine</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Montserrat:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body>
-
-    <div class="container">
-      <div class="card-white" id="introduction">
-        <h1>Hello, I'm Yassine ✌️</h1>
+    <div class="banner">
+      <div class="container">
+        <div class="card-white" id="introduction">
         <img src="images/profile.png" class="img-circle" width="100px" alt="Yassine Chaqs">
-        <p>
-          I am deeply passionate about electronic music, djing and producing 🎧. I am a trainee at Le Wagon Milano & a BSBA in Entrepreneurship graduate from Northeastern University, Boston.
-        </p>
-        <a href="#" class="btn-1">My Profile</a>
+        <h1>Yassine's Card</h1>
+        <h2>A small bio</h2>
+        </div>
       </div>
-      <div class="card-white">
-        <h2>Follow me</h2>
+    </div>
+    <div class="card-white">
+      <h3>About me</h3>
+      <p>
+        I’m a 22 years old Moroccan-Canadian that graduated from Northeastern University in Boston in 2020 with a BSBA in Entrepreneurship & New Venture Management. Currently trainee at the LeWagon Milano Web Development bootcamp, and future candidate for a Dual Degree Masters in 2021 at IE University in Madrid. Also, I am deeply passionate about electronic music, djing and producing 🎧.
+      </p>
+
+      <h3>Why I chose Le Wagon?</h3>
+      <p>
+        Since highschool I’m really interested in programming and tech in general. In highschool I did an IT & Computer Science class where I learned to code in Python (only basics), and also a little html & css, but I always thought that there was so much more to learn about. As I just finished my Bachelor degree, between my graduation and the start of my Masters degree I had a few months free, I thought that it would be the best opportunity for me to dive back into the programming world. In addition, my Masters will be in Digital Business and Innovation, I thought that it would be great to learn about the technical part of digital business, and be fully and intensely immersed into it before the starting my Masters.
+      </p>
+
+    </div>
+    <div class="card-white" id="follow">
+        <h4>Follow me</h4>
         <ul class="list-inline">
           <li>
             <a href="https://github.com/YCHQR" target="_blank">
@@ -32,7 +43,6 @@
             </a>
           </li>
         </ul>
-      </div>
     </div>
 
 </body></html>
